fix supabase database error
