# docs/swagger.json
@@ -19,11 +19,6 @@
     "paths": {
         "/books": {
             "get": {
-                "security": [
-                    {
-                        "JWT": []
-                    }
-                ],
                 "description": "Show All Books in the library",
                 "produces": [
                     "application/json"
